First commit - MVC+Hibernate+Validation

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,9 @@
-weight.text=New weight measure:
+addweight.text=Weight:
+addHigh.text=High:
+addMeasure.text=Add measures
+measureList.text=List of measures
+weight.text=Kid's weight
+high.text=Kid's high
+date.text=Date of measure
+explainText=Add current weight and high of your child:
+mainText=Check your kid's weight and high
