--- a/src/main/resources/messages_rus.properties
+++ b/src/main/resources/messages_rus.properties
@@ -1,1 +1,9 @@
-weight.text=Новое измерение веса:
+addweight.text=Вес:
+addHigh.text=Рост:
+addMeasure.text=Добавить измерения
+measureList.text=Список измерений
+weight.text=Вес ребенка
+high.text=Рост ребенка
+date.text=Дата измерения
+explainText=Добавьте текущий вес и рост ребенка:
+mainText=Отслеживайте вес и рост Вашего ребенка
